
2010-06-01 Ugo Pattacini <ugo.pattacini@iit.it>
	   * Ported to iCub/main

2010-04-28 Ugo Pattacini <ugo.pattacini@iit.it>
	   * name convention of some protected methods changed
       * bug fix on iKinLink copy constructor

2010-03-23 Ugo Pattacini <ugo.pattacini@iit.it>
	   * CMakeLists.cmake, IKINConfig.cmake: now ADD_IPOPT flag is set by default according
	     to the status of IPOPT_FOUND variable

2010-02-27 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: minimization against current q added
	   
2010-02-03 Ugo Pattacini <ugo.pattacini@iit.it>
	   * CMakeLists.txt, IKINConfig.cmake: for win32 DEBUG_POSTFIX put equal to "d"

2010-01-14 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: provided Jacobians for generic ith link

2010-01-13 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: rest position option extended

2010-01-12 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.h,.cpp: added options for torso rest positions
                         bug fixes for continuous mode

2009-12-20 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: iKinLimb class extended with new methods
                         for creating limb from a list of links properties

2009-12-18 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.h,.cpp: iCubInertialSensor class added

2009-11-11 Ugo Pattacini <ugo.pattacini@iit.it>
	   * all headers: namespace rearranged

2009-11-07 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinSlv.cpp, iKinSlv.h: DOF handling bug fix

2009-10-12 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinHlp.cpp, iKinHlp.h, iKinVocabs.h: files added

2009-07-29 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.cpp, iKinIpOpt.cpp: SE3inv() used instead of pinv()

2009-07-08 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinFwd.cpp: kinematic fix on the right leg

2009-07-04 Ugo Pattacini <ugo.pattacini@iit.it>
	   * iKinInv.h,.cpp: MultiRefDynCtrl renamed in MultiRefMinJerkCtrl

2009-06-25 Ugo Pattacini <ugo.pattacini@iit.it>